About Section 900px Responsive

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <li class="nav-list"> <a class="nav-links" href="#Section-3"> How it Works </a> </li>
           <li class="nav-list"> <a class="nav-links" href="#About"> About Us </a> </li>
           <li class="nav-list"> <a class="nav-links" href=""> FAQs </a> </li>
-          <li class="nav-list"> <a class="nav-links" href=""> Contact Us </a> </li>
+          <li class="nav-list"> <a class="nav-links" href="#Contact"> Contact Us </a> </li>
           <li class="nav-list"> <a class="nav-btn1" target="_blank" href="https://play.google.com/store/apps/details?id=com.moyemoye.chat"> Get Started </a></li>
       </div>
 
