--- a/index.html
+++ b/index.html
@@ -351,10 +351,11 @@
       </div>
       <div class="footer-right"> 
         <h5> Get the App </h5>
-        <a href=""> <img src="assets/images/mobile-app-store-badge.svg" alt=""></a>
-        <a href="https://play.google.com/store/apps/details?id=com.moyemoye.chat"> <img src="assets/images/play-app-store-badge.svg" alt=""></a>
+        <div class="footer-right-btns">
+          <a href=""> <img src="assets/images/mobile-app-store-badge.svg" alt=""></a>
+          <a href="https://play.google.com/store/apps/details?id=com.moyemoye.chat"> <img src="assets/images/play-app-store-badge.svg" alt=""></a>
+        </div>
       </div>
-      <div></div>
     </div>
     <hr>
     
