--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             creativity knows no bounds!</p>
         </div>
         <div class="btn-main">
-          <a class="hero-btn"> Download Moye Moye </a>
+          <a href="https://play.google.com/store/apps/details?id=com.moyemoye.chat" class="hero-btn"> Download Moye Moye </a>
         </div>
       </div>
       <div class="img-main">
